--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-This is my awesome website!!!
+---
+layout: default
+title: Jay's Github Page
+---
+<div class="blurb">
+	<h1>Hi there, I'm Jay!</h1>
+	<p>I'm best known as the wealthy millionaire from <em>A Touch of Evil</em> Trust me. <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
